Added Secure Chat button to dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,11 @@
                 <span class="tracking-[0.15em] text-xs font-mono transition-all">SECURE VAULT</span>
             </button>
 
+            <a href="/chat" class="flex items-center gap-2 text-[var(--primary)] font-bold transition-all border border-[var(--border)] bg-black/20 px-5 py-2 rounded-full hover:border-[var(--primary)] hover:bg-[var(--primary)] hover:text-black group decoration-0">
+                <span class="text-lg">💬</span>
+                <span class="tracking-[0.15em] text-xs font-mono transition-all">SECURE CHAT</span>
+            </a>
+
             <h1 class="text-2xl font-black tracking-widest text-center ml-4 hidden md:block" style="font-family: 'Orbitron', sans-serif;">CIPHER <span style="color: var(--primary)">VAULT</span></h1>
         </div>
 
