--- a/public/login.html
+++ b/public/login.html
@@ -12,8 +12,14 @@
             background-color: #050508; 
             color: #e2e8f0; 
             font-family: 'Orbitron', sans-serif; 
-            overflow: hidden; /* Prevent scrollbars */
-            cursor: none; /* Hide default cursor */
+            overflow: hidden; 
+            cursor: none !important; /* Force hide everywhere */
+        }
+
+        /* --- STRICT CURSOR REMOVAL --- */
+        /* This ensures the "I" beam and "Hand" never appear */
+        input, button, a, .cyber-input, .clip-path-polygon {
+            cursor: none !important;
         }
 
         /* --- CUSTOM CURSOR --- */
@@ -23,11 +29,11 @@
             width: 20px; height: 20px;
             border: 2px solid #00f3ff;
             border-radius: 50%;
-            pointer-events: none; /* Let clicks pass through */
+            pointer-events: none; /* Crucial: Lets clicks pass through to buttons below */
             z-index: 9999;
             transform: translate(-50%, -50%);
             box-shadow: 0 0 10px rgba(0, 243, 255, 0.5);
-            transition: width 0.2s, height 0.2s, background-color 0.2s;
+            transition: width 0.2s, height 0.2s, background-color 0.2s, border-color 0.2s;
             mix-blend-mode: difference;
         }
         
@@ -41,13 +47,13 @@
             transform: translate(-50%, -50%);
         }
 
-        /* Hover state for cursor */
+        /* Hover state for cursor (When over inputs/buttons) */
         body.hovering #cursor {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             background-color: rgba(0, 243, 255, 0.1);
-            border-color: #bc13fe; /* Accent color on hover */
-            box-shadow: 0 0 20px rgba(188, 19, 254, 0.4);
+            border-color: #bc13fe;
+            box-shadow: 0 0 30px rgba(188, 19, 254, 0.6);
         }
 
         /* --- MATRIX CANVAS --- */
@@ -56,7 +62,7 @@
             top: 0; left: 0;
             width: 100%; height: 100%;
             z-index: -1;
-            opacity: 0.2; /* Subtle background */
+            opacity: 0.2; 
         }
 
         /* --- UI ELEMENTS --- */
@@ -77,7 +83,6 @@
             background: rgba(0, 0, 0, 0.9);
         }
 
-        /* Button Polygon Shape */
         .clip-path-polygon {
             clip-path: polygon(10% 0, 100% 0, 100% 70%, 90% 100%, 0 100%, 0 30%);
         }
@@ -126,7 +131,6 @@
         const canvas = document.getElementById('matrixCanvas');
         const ctx = canvas.getContext('2d');
 
-        // Set canvas to full screen
         function resizeCanvas() {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
@@ -134,50 +138,44 @@
         window.addEventListener('resize', resizeCanvas);
         resizeCanvas();
 
-        const chars = '01ABCDEFGHIJKLMNOPQRSTUVWXYZ'; // Characters to drop
+        const chars = '01ABCDEFGHIJKLMNOPQRSTUVWXYZ';
         const fontSize = 14;
         const columns = canvas.width / fontSize;
         const drops = Array(Math.floor(columns)).fill(1);
 
         function drawMatrix() {
-            // Translucent black background to create trail effect
             ctx.fillStyle = 'rgba(5, 5, 8, 0.05)';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            ctx.fillStyle = '#00f3ff'; // Cyan Text
+            ctx.fillStyle = '#00f3ff';
             ctx.font = fontSize + 'px monospace';
 
             for (let i = 0; i < drops.length; i++) {
                 const text = chars.charAt(Math.floor(Math.random() * chars.length));
                 ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-
-                // Reset drop randomly to create rain effect
                 if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
                     drops[i] = 0;
                 }
                 drops[i]++;
             }
         }
-        setInterval(drawMatrix, 50); // Speed of rain
+        setInterval(drawMatrix, 50);
 
         // --- 2. CUSTOM CURSOR LOGIC ---
         const cursor = document.getElementById('cursor');
         const body = document.body;
 
-        // Move cursor
         document.addEventListener('mousemove', (e) => {
             cursor.style.left = e.clientX + 'px';
             cursor.style.top = e.clientY + 'px';
         });
 
-        // Add hover effect for inputs and buttons
         const interactables = document.querySelectorAll('button, input');
         interactables.forEach(el => {
             el.addEventListener('mouseenter', () => body.classList.add('hovering'));
             el.addEventListener('mouseleave', () => body.classList.remove('hovering'));
         });
 
-        // --- 3. AUTHENTICATION LOGIC (unchanged) ---
+        // --- 3. AUTH LOGIC ---
         let isLogin = true;
         const form = document.getElementById('authForm');
         const msg = document.getElementById('message');
@@ -195,7 +193,6 @@
             const p = document.getElementById('password').value;
             const endpoint = isLogin ? '/api/auth/login' : '/api/auth/register';
 
-            // Add loading effect
             const btn = document.querySelector('button[type="submit"]');
             const originalText = btn.innerText;
             btn.innerText = "PROCESSING...";
