--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
             cursor: none !important;
         }
 
-        /* The Custom Cursor Container */
+        /* --- THE SNIPER CROSSHAIR CURSOR --- */
         #app-cursor {
             position: fixed;
             top: 0; left: 0;
@@ -38,45 +38,65 @@
             pointer-events: none;
             transform: translate(-50%, -50%);
             mix-blend-mode: difference;
+            width: 30px; height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        /* Center Dot (The actual point) */
-        .cursor-core {
-            width: 2px; height: 2px;
+        /* Center Dot */
+        .cursor-dot {
+            width: 4px; height: 4px;
             background-color: #00f3ff;
+            border-radius: 50%;
             position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            box-shadow: 0 0 4px #00f3ff;
+            z-index: 2;
+            box-shadow: 0 0 5px #00f3ff;
+            transition: all 0.2s ease;
         }
 
-        /* Outer Shape - "Data Bit" Style */
-        .cursor-ring {
-            width: 14px; height: 14px; /* Small and precise */
-            border: 1px solid #00f3ff;
-            /* Square with slight rounded corners = Tech look */
-            border-radius: 2px; 
+        /* Crosshair Lines */
+        .cursor-line {
             position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275); /* Snap effect */
-            opacity: 0.8;
+            background-color: #00f3ff;
+            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
-        /* Hover State: "Target Locked" - Diamond Shape */
-        body.hovering .cursor-ring {
-            width: 24px; height: 24px;
-            border-color: #bc13fe; /* Purple */
-            border-width: 1px;
-            transform: translate(-50%, -50%) rotate(45deg); /* Turn into diamond */
-            background-color: rgba(188, 19, 254, 0.1);
-            box-shadow: 0 0 10px rgba(188, 19, 254, 0.3);
+        /* Vertical Lines */
+        .line-v { width: 2px; height: 10px; }
+        .line-v.top { top: 0; }
+        .line-v.bottom { bottom: 0; }
+
+        /* Horizontal Lines */
+        .line-h { width: 10px; height: 2px; }
+        .line-h.left { left: 0; }
+        .line-h.right { right: 0; }
+
+        /* --- HOVER STATE: TARGET LOCKED --- */
+        body.hovering .cursor-dot {
+            background-color: #bc13fe; /* Purple */
+            box-shadow: 0 0 10px #bc13fe;
+            transform: scale(1.5);
         }
 
-        body.hovering .cursor-core {
+        body.hovering #app-cursor {
+            transform: translate(-50%, -50%) rotate(45deg); /* Spin 45 degrees */
+        }
+
+        body.hovering .cursor-line {
             background-color: #bc13fe;
-            box-shadow: 0 0 6px #bc13fe;
         }
+
+        /* Clamp lines inward */
+        body.hovering .line-v { height: 14px; } 
+        body.hovering .line-h { width: 14px; }
+        
+        /* Eliminate gap on hover */
+        body.hovering .line-v.top { top: 8px; } 
+        body.hovering .line-v.bottom { bottom: 8px; }
+        body.hovering .line-h.left { left: 8px; } 
+        body.hovering .line-h.right { right: 8px; }
+
 
         /* --- UI STYLES --- */
         .orbitron { font-family: 'Orbitron', sans-serif; } 
@@ -94,8 +114,11 @@
 <body class="h-screen w-screen flex flex-col overflow-hidden">
 
     <div id="app-cursor">
-        <div class="cursor-ring"></div>
-        <div class="cursor-core"></div>
+        <div class="cursor-dot"></div>
+        <div class="cursor-line line-v top"></div>
+        <div class="cursor-line line-v bottom"></div>
+        <div class="cursor-line line-h left"></div>
+        <div class="cursor-line line-h right"></div>
     </div>
 
     <nav class="fixed top-0 w-full p-4 flex justify-between items-center z-50 bg-[var(--bg-panel)]/90 backdrop-blur border-b border-[var(--border)]">
@@ -622,3 +645,6 @@
     </script>
 </body>
 </html>
+
+
+this is my entire index.html make the smalll without changing other logics
