--- a/public/index.html
+++ b/public/index.html
@@ -15,69 +15,14 @@
 
         :root[data-theme="void"] { --bg-body: #050508; --bg-panel: #0f1015; --primary: #00f3ff; --accent: #bc13fe; --border: #1e293b; --glow: 0 0 20px rgba(0, 243, 255, 0.2); }
         
-        /* --- CURSOR SYSTEM --- */
         body { 
             background-color: var(--bg-body); 
             color: #e2e8f0; 
             font-family: 'Inter', sans-serif; 
             background-image: radial-gradient(var(--border) 1px, transparent 1px); 
             background-size: 30px 30px;
-            cursor: none !important; /* Hide default cursor */
+            /* Default cursor restored */
         }
-
-        /* Force hide cursor on all interactables */
-        a, button, input, textarea, select, label, .tool-btn {
-            cursor: none !important;
-        }
-
-        /* The Custom Precision Cursor */
-        #app-cursor {
-            position: fixed;
-            top: 0; left: 0;
-            z-index: 9999;
-            pointer-events: none;
-            transform: translate(-50%, -50%);
-            mix-blend-mode: difference;
-        }
-
-        /* Center Dot (Always sharp) */
-        .cursor-core {
-            width: 4px; height: 4px;
-            background-color: #00f3ff;
-            border-radius: 50%;
-            position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            box-shadow: 0 0 5px #00f3ff;
-        }
-
-        /* Outer Precision Ring - SIZE REDUCED HERE */
-        .cursor-ring {
-            width: 10px; height: 10px; /* Reduced from 18px */
-            border: 1px solid rgba(0, 243, 255, 0.6);
-            border-radius: 50%;
-            position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            transition: all 0.15s ease-out;
-        }
-
-        /* Hover State: "Processing" Mode - SIZE REDUCED HERE */
-        body.hovering .cursor-ring {
-            width: 20px; height: 20px; /* Reduced from 28px */
-            border-color: #bc13fe; /* Purple */
-            border-width: 1px;
-            border-style: dashed;
-            animation: spin precision 2s linear infinite;
-            background-color: rgba(188, 19, 254, 0.1);
-        }
-
-        body.hovering .cursor-core {
-            background-color: #bc13fe;
-            box-shadow: 0 0 8px #bc13fe;
-        }
-
-        @keyframes spin { 100% { transform: translate(-50%, -50%) rotate(360deg); } }
 
         /* --- UI STYLES --- */
         .orbitron { font-family: 'Orbitron', sans-serif; } 
@@ -93,11 +38,6 @@
     </style>
 </head>
 <body class="h-screen w-screen flex flex-col overflow-hidden">
-
-    <div id="app-cursor">
-        <div class="cursor-ring"></div>
-        <div class="cursor-core"></div>
-    </div>
 
     <nav class="fixed top-0 w-full p-4 flex justify-between items-center z-50 bg-[var(--bg-panel)]/90 backdrop-blur border-b border-[var(--border)]">
         <div class="flex items-center gap-4">
@@ -251,22 +191,6 @@
     </div>
 
     <script>
-        // --- CUSTOM CURSOR LOGIC ---
-        const cursor = document.getElementById('app-cursor');
-        const cursorRing = cursor.querySelector('.cursor-ring');
-        
-        document.addEventListener('mousemove', (e) => {
-            cursor.style.left = e.clientX + 'px';
-            cursor.style.top = e.clientY + 'px';
-        });
-
-        // Hover Effect
-        const interactables = document.querySelectorAll('button, input, textarea, select, a, .border');
-        interactables.forEach(el => {
-            el.addEventListener('mouseenter', () => document.body.classList.add('hovering'));
-            el.addEventListener('mouseleave', () => document.body.classList.remove('hovering'));
-        });
-
         const token = localStorage.getItem('auth-token');
         if (!token) window.location.href = '/login.html';
         function logout() { localStorage.removeItem('auth-token'); window.location.href = '/login.html'; }
