name change At login

--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cipher Vault | Access Control</title>
+    <title>CryptPact | Access Control</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;900&display=swap" rel="stylesheet">
     <style>
@@ -130,7 +130,7 @@
     <div class="w-96 p-8 bg-black/80 backdrop-blur-md rounded-xl glow text-center relative overflow-hidden z-10">
         <div class="absolute top-0 left-0 w-full h-1 bg-[#00f3ff] shadow-[0_0_20px_#00f3ff]"></div>
 
-        <h1 class="text-3xl text-[#00f3ff] font-black mb-2 tracking-[0.2em] animate-pulse">CIPHER VAULT</h1>
+        <h1 class="text-3xl text-[#00f3ff] font-black mb-2 tracking-[0.2em] animate-pulse">CRYPT PACT</h1>
         <p class="text-[10px] text-gray-500 mb-8 font-mono tracking-widest">SECURE ACCESS TERMINAL</p>
         
         <form id="authForm" class="space-y-5">
